--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,4 +1,24 @@
 {
   "buildCommand": "npm run build",
-  "outputDirectory": "dist"
+  "outputDirectory": "dist",
+  "routes": [
+    {
+      "src": "/bulk.html",
+      "dest": "/bulk.html"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "/$1"
+    }
+  ],
+  "rewrites": [
+    {
+      "source": "/",
+      "destination": "/index.html"
+    },
+    {
+      "source": "/bulk",
+      "destination": "/bulk.html"
+    }
+  ]
 }
